--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
   background-color:  lightgrey;
   /**/
 }
+
 .subject{font-size:.8em;}
 
 .rightAlign{
@@ -89,6 +90,22 @@ body {
 }
 .shorter{width:80%;text-align: "left";}
 
+select{
+  border:1px  solid red;
+  height:2em;
+  width:6em;
+  font-size: 1em;
+
+}
+#markExam{
+  border:1px  solid red;
+  background-color: white;
+width:8em;
+height:2em;
+border-radius: 5px;
+font-size: 1em;
+}
+
   </style>
 </head>
 <body>
@@ -131,12 +148,8 @@ body {
 </div>
 
 
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style></style>
-<body>
 
-
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
@@ -148,9 +161,25 @@ function $id(id){
 function correct_question( q_Id, answer ){
     //check selected index of pull-down box for correct answer
   //indexes ALWAYS start at 0!
-  var quest = document.getElementById(q_Id);
-  return (quest.selectedIndex == answer)? 1 : 0;
+  var mark = document.createElement("i")
+  mark.className = "fa fa-close fa-2x"
+  mark.style.color = "red"
+  var question = document.getElementById(q_Id).parentNode;
+  var selcectBox = document.getElementById(q_Id);
+  var isCorrect = (selcectBox.selectedIndex == answer)? 1 : 0;
+  if (isCorrect) {
+    mark.className = "fa fa-check fa-2x"
+    mark.style.color = "green"
+  };
+  question.appendChild(mark)
+
+  return isCorrect
 }
+
+
+
+
+
 function gradeTest() {
   //variables with global implications
   var totalQuestions = 2;
@@ -168,6 +197,7 @@ function gradeTest() {
   else {
     alertText = "You got " + correctAnswers + " out of " + totalQuestions + " correct!";
   }
+  alertText += "<br>Time: "+  parseInt( (+new Date() - examStartTime )/1000 , 10) + " sec"
   $id("show_q1b_answer").innerHTML = alertText;
 }//end grade test
 //------------------------------------------------------------
@@ -193,7 +223,7 @@ The bar chart below displays the development index for 153 countries in four cat
 a. How many of these countries have a very high development index?
 <div class="rightAlign">1 mark</div>
 
-<form id="test">
+<form id="test1">
 <select name="q1a" id="q1a">
 <option value="0">0</option>
 <option value="45">45</option>
@@ -201,6 +231,7 @@ a. How many of these countries have a very high development index?
 <option value="27">27</option>
 <option value="31">31</option>
 </select>
+<span></span>
 </form>
 
 
@@ -222,6 +253,8 @@ b. What percentage of the 153 countries has either a low or medium development i
 <option value="71">71%</option>
 <option value="85">85%</option>
 </select>
+<span></span>
+
 </form>
 
 <hr>
@@ -259,18 +292,26 @@ a cross (X).</p> <div class="rightAlign">2 mark</div>
 
 
 
-<div class="container">
-<input name="submit" type="button" id = "btn_q1b_submit" value="Mark This Exam"/><br><br>
+<div class="container green">
+<span ><i class="fa fa-pencil fa-2x"></i></span>
+<input id = "markExam" name="submit" type="button"  value='Mark This Exam'/><br><br>
 <div id="show_q1b_answer">results:</div>
 
 </div>
 <script>
-  document.getElementById("btn_q1b_submit").addEventListener("click", gradeTest
-, false);
-</script>
+
+
+function addIcon(el, icon, size){
+  var mark = document.createElement("i")
+  mark.className = "fa fa-"+icon+" fa-"+size+"x"
+  el.appendChild(mark)
+}
+//addIcon(document.getElementById("markExam"), "pencil", 2)
+
+var examStartTime = +new Date()
+  document.getElementById("markExam").addEventListener("click", gradeTest, false);
 
 <!-- container -->
-<script>
 //http://stackoverflow.com/questions/21639305/d3js-take-data-from-an-array-instead-of-a-file
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
@@ -416,10 +457,9 @@ function type(d) {
 //   xhr.onload = callback;
 //   xhr.send();
 // }
-
+///---------------------------d3
 </script>
 <br>
-here again
 
 
 
